--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -44,7 +44,7 @@
         <label>女性</label><input type="radio" name="gender">
         <label>その他</label><input type="radio" name="gender">
         <br>
-        <lable>おすすめの和菓子の名称</lable>
+        <label>おすすめの和菓子の名称</label>
         <input type="text" placeholder="例：みたらし団子">
         <br>
         <br>
@@ -60,7 +60,7 @@
       </form>
      </section>
       </article>
-      <articla>
+      <article>
         <h2>テクノロジー</h2>
         <section>
           <h3>SAMURAIが新しい動画をリリース</h3>
@@ -68,7 +68,7 @@
         動画の内容はHTML/CSSの解説です。</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/2JLiGSUohEo?si=d3YByWHt_ybx_Vmz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
         </section>
-      </articla>
+      </article>
     </main>
     <footer>
       <p>&copy;SAMURAIニュース</p>
