--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -18,7 +18,7 @@
     </header>
     <main>
       <article>
-        <h2>社会</h2>
+        <h2>社会です。</h2>
         <section>
         <h3>和菓子屋も「トリックオアトリート!」</h3>
         <p>日本でも年々人気の高まるハロウィン。<br>
