--- a/kadai_mdn_css/mdn.html
+++ b/kadai_mdn_css/mdn.html
@@ -4,7 +4,7 @@
 <head>
   <style>
     div{
-      transform: rotate3d(1,1,1,20deg);
+      transform: rotate(20deg);
       position: absolute;
       left: 50px;
       top: 50px;
